--- a/apps/web/public/locales/el-GR.json
+++ b/apps/web/public/locales/el-GR.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Λάθος δίκτυο",
   "Check your network": "Ελέγξτε το δίκτυό σας",
   "Switch to %network%": "Αλλαγή στο %network%",
-  "You are in wrong network": "Είστε σε λάθος δίκτυο",
+  "You are in the wrong network": "Είστε σε λάθος δίκτυο",
   "This page is located for %network%.": "Αυτή η σελίδα είναι για το δίκτυο %network%.",
   "You are under %network% now, please switch the network to continue.": "Βρίσκεστε στο δίκτυο %network% τώρα, αλλάξτε δίκτυο για να συνεχίσετε.",
   "Switch network to continue.": "Αλλάξτε δίκτυο για να συνεχίσετε.",
