--- a/apps/web/public/locales/it-IT.json
+++ b/apps/web/public/locales/it-IT.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Rete errata",
   "Check your network": "Controlla la tua rete",
   "Switch to %network%": "Passa a %network%",
-  "You are in wrong network": "Sei nella rete errata",
+  "You are in the wrong network": "Sei nella rete errata",
   "This page is located for %network%.": "Questa pagina è per %network%.",
   "You are under %network% now, please switch the network to continue.": "Ora sei nella rete %network%, cambia rete per continuare.",
   "Switch network to continue.": "Cambia rete per continuare.",
