--- a/apps/web/public/locales/nl-NL.json
+++ b/apps/web/public/locales/nl-NL.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Verkeerd netwerk",
   "Check your network": "Controleer je netwerk",
   "Switch to %network%": "Overschakelen naar %network%",
-  "You are in wrong network": "Je zit op het verkeerde netwerk",
+  "You are in the wrong network": "Je zit op het verkeerde netwerk",
   "This page is located for %network%.": "Deze pagina is voor %network%.",
   "You are under %network% now, please switch the network to continue.": "Je zit nu op %network%, wissel van netwerk om door te gaan.",
   "Switch network to continue.": "Wissel van netwerk om door te gaan.",
