--- a/apps/web/public/locales/ro-RO.json
+++ b/apps/web/public/locales/ro-RO.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Rețea greșită",
   "Check your network": "Verifică-ți rețeaua",
   "Switch to %network%": "Treci la %network%",
-  "You are in wrong network": "Ești în rețeaua greșită",
+  "You are in the wrong network": "Ești în rețeaua greșită",
   "This page is located for %network%.": "Această pagină este prevăzută pentru %network%.",
   "You are under %network% now, please switch the network to continue.": "Acum ești în %network%. Schimbă rețeaua pentru a continua.",
   "Switch network to continue.": "Schimbă rețeaua pentru a continua.",
