--- a/apps/web/public/locales/vi-VN.json
+++ b/apps/web/public/locales/vi-VN.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Sai mạng lưới",
   "Check your network": "Kiểm tra mạng lưới của bạn",
   "Switch to %network%": "Chuyển sang %network%",
-  "You are in wrong network": "Bạn đang ở sai mạng lưới",
+  "You are in the wrong network": "Bạn đang ở sai mạng lưới",
   "This page is located for %network%.": "Trang này được dành cho %network%.",
   "You are under %network% now, please switch the network to continue.": "Bạn đang ở trong %network%, vui lòng chuyển mạng lưới để tiếp tục.",
   "Switch network to continue.": "Chuyển mạng lưới để tiếp tục.",
