--- a/apps/web/public/locales/pt-BR.json
+++ b/apps/web/public/locales/pt-BR.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Rede incorreta",
   "Check your network": "Confira sua rede",
   "Switch to %network%": "Trocar para %network%",
-  "You are in wrong network": "Você está em uma rede incorreta",
+  "You are in the wrong network": "Você está em uma rede incorreta",
   "This page is located for %network%.": "Esta página destina-se a %network%.",
   "You are under %network% now, please switch the network to continue.": "Agora você está em %network%, troque de rede para continuar.",
   "Switch network to continue.": "Troque de rede para continuar.",
