--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -1939,7 +1939,7 @@
   "Wrong Network": "Wrong Network",
   "Check your network": "Check your network",
   "Switch to %network%": "Switch to %network%",
-  "You are in wrong network": "You are in wrong network",
+  "You are in the wrong network": "You are in the wrong network",
   "This page is located for %network%.": "This page is located for %network%.",
   "You are under %network% now, please switch the network to continue.": "You are under %network% now, please switch the network to continue.",
   "Switch network to continue.": "Switch network to continue.",
